# entity-extraction

./: .gitignore  pyproject.toml
data_extraction/: nerel-to-relik.ipynb
datasets/: data_dev_entity_linking.json  data_dev_relation_extraction.json  data_test_entity_linking.json  data_test_relation_extraction.json
experiments/: ner-corpus.ipynb
experiments/BERT/: bert-lora.ipynb
experiments/LSTM/PyTorch/: ner-data-with-lstm-on-pytorch.ipynb
