[tool.poetry]
name = "entity-extraction"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
datasets = "^3.0.2"
tokenizers = "^0.20.1"
transformers = "^4.45.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
