[tool.poetry]
name = "entity-extraction"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
datasets = "^3.0.2"
tokenizers = "^0.20.1"
transformers = {extras = ["torch"], version = "^4.46.0"}
ipykernel = "^6.29.5"
torch = "^2.5.0"
evaluate = "^0.4.3"
seqeval = "^1.2.2"
torchinfo = "^1.8.0"
peft = {git = "https://github.com/huggingface/peft"}
clearml = "^1.16.4"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
